--- a/variables/variables.scss
+++ b/variables/variables.scss
@@ -19,7 +19,9 @@ $yellow: #cc9900;
 }
 
 @font-face {
+  font-family: SignPainter;
   src: url(fonts/SignPainter.ttc);
+  src: url('fonts/Signpainter.ttc') format('ttc');
 }
 
 .limit-min {
